--- a/leetcode/3.md
+++ b/leetcode/3.md
@@ -48,6 +48,27 @@ public:
     }
 };
 ```
+```c++
+class Solution {
+public:
+    int lengthOfLongestSubstring(string s) {
+        if (s.size() == 0) return 0;
+        int left = 0, right = 0;
+        int res = 0;
+        vector<int> index(128, -1); // 每个字符最后出现的位置, 字符ASCII值小于128
+        while (right < s.size()) {
+            if (index[s[right]] != -1) { // 遇到过该字符
+                left = max(left, index[s[right]] + 1); // 放弃旧left到重复字符这一段, 将left更新为重复字符索引以规避重复
+            }
+            index[s[right]] = right; // 更新该字符的最后出现位置
+            res = max(res, right - left + 1); // 更新答案
+            right++;
+        }
+        return res;
+    }
+};
+```
 # 总结
    动不动就用 unorder_set? 
    动态规划问题的关键在于找到 转移方程
+   用hash 存储该字符的最后出现位置
